<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <TextView
        android:text="Response:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/TestText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Response"
        android:id="@+id/ResponseText"
        android:layout_marginLeft="22dp" android:layout_marginStart="22dp" android:layout_alignTop="@+id/TestText"
        android:layout_toRightOf="@+id/TestText" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextPhone"
        android:phoneNumber="false"
        android:hint="@string/phone_number" android:password="false"
        android:layout_centerVertical="true" android:layout_alignLeft="@+id/editTextPass2"
        android:layout_alignStart="@+id/editTextPass2"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPass"
        android:hint="@string/Password"
        android:layout_below="@+id/editTextPhone" android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:id="@+id/buttonSend"
        android:onClick="sendUserData"
        android:layout_below="@+id/editTextPass2" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:layout_alignRight="@+id/ResponseText"
        android:layout_alignEnd="@+id/ResponseText"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPass2"
        android:hint="@string/password_confirm"
        android:layout_below="@+id/editTextPass" android:layout_alignLeft="@+id/editTextPass"
        android:layout_alignStart="@+id/editTextPass"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextUserName"
        android:hint="@string/user_name"
        android:layout_above="@+id/editTextPass2" android:layout_alignLeft="@+id/editTextPhone"
        android:layout_alignStart="@+id/editTextPhone" android:layout_marginBottom="41dp"/>
</RelativeLayout>